# hibah-riset

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  skills-lock.json
configs/: s1_detector_smoke.yaml  s1_quant_inria.yaml  s1_quant_large.yaml  s1_quant_medium.yaml
core/counting/: counter.py  detector.py  models.py
core/gui/: drawer.py
data/: README.md
docs/: 00-project-brief.md  01-pre-plan.md  PROGRESS.md  panduan-training-kampus.md
docs/_extracted/: F-Paper-Penelitian.txt  Status_Indeksasi_Referensi.txt  f_paper_penelitian.md  manifest.json  proposal_puu_2026_counting.md
docs/diagrams/: proposed-method-architecture.mmd
docs/drafts/: pekerjaan-terkait.md  pendahuluan.md  usulan-pendekatan.md
docs/experiments/: s1-detector-smoke-test.md  s1-quant-inria.md  s1-quant-large.md  s1-quant-medium.md
experiments/: Jalankan_Eksperimen_SOTA_Colab.ipynb  yolo_comparison_results.csv
models/: README.md
notebooks/: 01_smoke_test_detector.ipynb  02_s1_quant_inria.ipynb  03_s1_quant_medium.ipynb  04_s1_quant_large_xl.ipynb  yolo_comparison_colab.ipynb
prompts/: citation-auditor.md  final-verifier.md  fulltext-reader.md  researcher-source-ledger.md  reviewer-brutal.md  reviewer-usulan-pendekatan.md  writer-pekerjaan-terkait.md  writer-pendahuluan.md  writer-usulan-pendekatan.md
references/: README.md  references.bib  source-id-map.md
scripts/: download_crowdhuman.py  gui_app.py  validate_research_artifacts.py  validate_revisi_no3.py
src/: detector.py  eval_counting.py  eval_detection.py  eval_mAP.py  pipeline.py
(+134 files in other folders)
